# stockeye-cli

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.bat  start.sh
app/: cli.py  config.py  storage.py
app/commands/: run.py  scan.py  watch.py
app/core/: data_fetcher.py  fundamentals.py  indicators.py  rating.py  scanner.py
stockeye/: __init__.py  cli.py  config.py  storage.py
stockeye/commands/: __init__.py  bargain.py  mos.py  run.py  scan.py  watch.py
stockeye/core/: classic_bargain.py  fundamentals.py  indicators.py  margin_of_safety.py  rating.py  scanner.py
stockeye/data/: NIFTY-100.csv  NIFTY-200.csv  NIFTY-50.csv  NIFTY-500.csv  NIFTY-AUTO.csv  NIFTY-BANK.csv  NIFTY-CHEMICALS.csv  NIFTY-CONSUMER-DURABLES.csv  NIFTY-ENERGY.csv  NIFTY-FINANCIAL-SERVICES.csv  NIFTY-FMCG.csv  NIFTY-INDIA-DEFENCE.csv  NIFTY-INDIA-TOURISM.csv  NIFTY-INFRASTRUCTURE.csv  NIFTY-IT.csv  NIFTY-MEDIA.csv  NIFTY-METAL.csv  NIFTY-MICROCAP-250.csv  NIFTY-MIDCAP-100.csv  NIFTY-MIDCAP-SELECT.csv  NIFTY-MIDSMALLCAP-400.csv  NIFTY-NEXT-50.csv  NIFTY-OIL-AND-GAS.csv  NIFTY-PHARMA.csv  NIFTY-REALTY.csv  NIFTY-RURAL.csv  NIFTY-SMALLCAP-100.csv  NIFTY-SMALLCAP-250.csv  NIFTY-SME-EMERGE.csv  NIFTY-TOTAL-MARKET.csv  STOCKS-TRADED.csv  load_data.py
stockeye/scanners/: bargain_scanner.py  graham_value_scanner.py  strong_buys_scanner.py  strong_fundamental_scanner.py
stockeye/services/: analyzer.py  bargain_analyzer.py  data_fetcher.py  scanner.py  watchlist_manager.py
stockeye/utils/: formatters.py  utilities.py
