[project]
name = "stockeye"
version = "1.0.0"
dependencies = [
  "typer",
  "yfinance",
  "pandas",
  "pandas_ta",
  "rich"
]

[project.scripts]
stockeye = "stockeye.cli:main"

[tool.setuptools]
packages = ["stockeye","stockeye.commands", "stockeye.core","stockeye.data"]

[tool.setuptools.package-data]
"stockeye.data" = ["*.csv"]
