[project]
name = "stockeye"
version = "2.0.0"
dependencies = [
  "typer",
  "yfinance",
  "pandas",
  "pandas_ta",
  "rich"
]

[project.scripts]
stockeye = "stockeye.cli:main"

[tool.setuptools]
packages = [
  "stockeye",
  "stockeye.commands",
  "stockeye.core",
  "stockeye.services",
  "stockeye.data",
]

[tool.setuptools.package-data]
"stockeye.data" = ["*.csv"]
